--- a/index.html
+++ b/index.html
@@ -12,51 +12,54 @@
 	<body>
 		<section class="todoapp" id="todoapp">
 			<header class="header">
-				<h1>{{title}}</h1>
+				<h1>TodoMVC</h1>
 				<input @keyup.enter = "addItem" class="new-todo" placeholder="What needs to be done?" v-focus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
 			<section class="main" v-show="items.length">
-				<input v-model="toggleAll" id="toggle-all" class="toggle-all" type="checkbox">
+				<input id="toggle-all" v-model="isSelectAll" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list">
 					<!-- These are here just to show the structure of the list items -->
 					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-					<li v-for = "(item,index) in filter" :class = "{completed:item.completed,editing:item === currentItem}" >
+					<li v-for = "(item,index) in filterItems" :class = "{completed:item.completed,editing:item === currentItem}" >
 						<div class="view">
 							<!-- v-model双向绑定 -->
 							<input class="toggle" type="checkbox" v-model="item.completed">
 							<!-- 修改事件项的内容 -->
-							<label @dblclick="dblc(item)">{{item.content}}</label>
-							<button @click = "removeItem(index)" class="destroy" :value = "item.id"></button>
+							<label @dblclick="toEdit(item)">{{item.content}}</label>
+							<button class="destroy" :value="item.id" @click="removeItem(index)"></button>
 						</div>
-						<input v-focus="item === currentItem" @keyup.enter="enter(item,index,$event)" @blur="enter(item,index,$event)"
-								@keyup.esc="esc" class="edit" :value="item.content">
+						<input class="edit" @keyup.esc="cancelEdit"
+							   @keyup.enter="saveData(item,index,$event)"
+							   @blur="saveData(item,index,$event)"
+							   v-todo-focus="item===currentItem"
+							   :value="item.content">
 					</li>
 				</ul>
 			</section>
 			<!-- This footer should hidden by default and shown when there are todos -->
 			<footer class="footer" v-show="items.length" >
 				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>{{remain}}</strong> item{{remain === 1?'':'s'}} left</span>
+				<span class="todo-count"><strong>{{incomlete}}</strong> item{{incomlete === 1?'':'s'}} left</span>
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
-						<a :class="{selected:filterStatus==='all'}" href="#/">All</a>
+						<a :class="{selected:filterState==='all'}" href="#/">All</a>
 					</li>
 					<li>
-						<a :class="{selected:filterStatus==='active'}" href="#/active">Active</a>
+						<a :class="{selected:filterState==='active'}" href="#/active">Active</a>
 					</li>
 					<li>
-						<a :class="{selected:filterStatus==='completed'}" href="#/completed">Completed</a>
+						<a :class="{selected:filterState==='completed'}" href="#/completed">Completed</a>
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
 				<!-- 当总任务数大于未完成任务数，则显示按钮 -->
-				<button v-show="items.length > remain" @click="clearItems" class="clear-completed">Clear completed</button>
+				<button @click="removeAllCompleted" class="clear-completed" v-show="items.length > incomplete">Clear completed</button>
 			</footer>
 		</section>
-		<footer class="info">
+		<footer class="info" v-show="items.length">
 			<p>Double-click to edit a todo</p>
 			<!-- Remove the below line ↓ -->
 			<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
